hyrax_tests/errors/bes_internal_fatal_error.dods
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dods?error(2)
-s
